--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
                 <div class="title">Contact</div>
                 <div class="contact">
                     <ul>
-                        <li>
-                            <div class="li_wrap">
-                                <div class="icon"><i class="fas fa-mobile-alt"></i></div>
-                                <div class="text">+63 905 5549 632</div>
-                            </div>
-                        </li>
+        
                         <li>
                             <div class="li_wrap">
                                 <div class="icon"><i class="fas fa-envelope"></i></div>
@@ -35,7 +30,7 @@
                         <li>
                             <div class="li_wrap">
                                 <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
-                                <div class="text">Acacia Estate, Brg. Ususan, Taguig City</div>
+                                <div class="text">Philippines</div>
                             </div>
                         </li>
                     </ul>
