--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
                     </li>
                     <li>
                         <div class="li_wrap">
+                            <div class="icon"><i class="fab fa-node"></i></div>
+                            <div class="text">Node.js</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="li_wrap">
                             <div class="icon"><i class="fab fa-linux"></i></div>
                             <div class="text">Linux</div>
                         </div>
