--- a/index.html
+++ b/index.html
@@ -115,12 +115,19 @@
             <div class="header">
                 <div class="name_role">
                     <div class="name">Krisha Marie Tedoso</div>
-                    <div class="role">Objective</div>
                 </div>
-                <div class="about">
-                    	Seeking an entry-level position to begin my career in high-level professional environment and to secure a challenging role in a reputable organization to expand my learning, knowledge and skills.                 </div>
-            </div>
             <div class="right_inner">
+                 <div class="objective">
+                    <div class="personal">
+                        <div class="title">objective</div>
+                        <div class="personal_wrap">
+                            <ul><li>
+                           <p class="info_com">
+                            Seeking an entry-level position to begin my career in high-level professional environment and to secure a challenging role in a reputable organization to expand my learning, knowledge and skills.
+                           </p></li></ul>
+                        </div>
+                    </div>
+                </div>
                 <div class="exp">
                     <div class="title">Experience</div>
                     <div class="exp_wrap">
