--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                 </li>
                 <li>
                     <div class="li_wrap">
-                        <div class="icon"><i class="fas fa-tv"></i></div>
-                        <div class="text">Watching</div>
+                        <div class="icon"><i class="fas fa-plane"></i></div>
+                        <div class="text">Travelling</div>
                     </div>
                 </li>
             </ul>
