--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
                     </ul>
                 </div>
         </div>
+            
+                <div class="contact_wrap pd">
+            <div class="title">Website</div>
+            <div class="contact">
+                <ul>
+                    <li>
+                        <div class="li_wrap">
+                            <div class="icon"><i class="fas fa-pager"></i></div>
+                            <div class="text"><a class="mail" href=" https://kmtedoso97.github.io/plant/">kmtedoso97.github.io/plant/</a></div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+    </div>
+
+            
         <div class="skills_wrap pd">
             <div class="title">Skills</div>
             <div class="skills">
